--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fff</color>
+    <color name="hot_weather_color">#F44336</color>
+    <color name="cold_weather_color">#2196F3</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
