--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="dialog_title">22sp</dimen>
+    <dimen name="temperature_top">50sp</dimen>
 </resources>
