Added a snackbar for instructions

--- a/app/src/main/res/layout/fragment_weekly_weather.xml
+++ b/app/src/main/res/layout/fragment_weekly_weather.xml
@@ -4,23 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/mainLayout"
-    tools:context=".view.MainActivity">
+    android:id="@+id/weeklyLayout"
+    tools:context=".view.fragments.WeeklyWeatherFragment">
 
-    <FrameLayout
-        android:id="@+id/fragmentWeekly"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentHourly" />
-
-    <FrameLayout
-        android:id="@+id/fragmentHourly"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/fragmentWeekly"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
