--- a/app/src/main/res/layout/fragment_hourly_weather.xml
+++ b/app/src/main/res/layout/fragment_hourly_weather.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/hourlyWeatherLayout"
     android:background="@color/cold_weather_color"
-    tools:context=".HourlyWeatherFragment">
+    tools:context=".view.fragments.CurrentWeatherFragment">
 
 
     <TextView
@@ -14,14 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/f_c"
-        android:textSize="@dimen/temperature_top"
         android:textColor="@color/white"
+        android:textSize="@dimen/temperature_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/watherImage"
@@ -48,4 +48,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/watherImage" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/today"
+        android:textColor="@color/white"
+        android:textSize="@dimen/temperature_top"
+        app:layout_constraintBottom_toTopOf="@+id/currentWeather"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
